packages/nys-tab/src/nys-tab.scss
:host([selected]) {
  nys-button {
    --nys-button-background-color: var(--nys-color-neutral-10);
    --_nys-button-border-color: var(--nys-color-theme);
    --_nys-button-border-color--hover: var(--nys-color-theme-strong);
    --_nys-button-border-color--active: var(--nys-color-theme-stronger);
  }
}

nys-button.nys-tab {
  --nys-button-background-color: var(--nys-color-surface);
  --nys-button-background-color--hover: var(--nys-color-theme-weaker);
  --nys-button-background-color--active: var(--nys-color-theme-weak);
  --nys-button-color: var(--nys-color-ink);
  --nys-button-color--hover: var(--nys-color-ink);
  --nys-button-color--active: var(--nys-color-ink);
  --_nys-button-border-color: var(--nys-color-neutral-50);
  --_nys-button-border-color--disabled: var(--nys-color-neutral-50);
  --_nys-button-border-color--hover: var(--nys-color-theme-weak);
  --_nys-button-border-color--active: var(--nys-color-theme-mid);
  --_nys-button-border-radius: var(--nys-radius-md, 4px)
    var(--nys-radius-md, 4px) 0 0;
  --_nys-button-border-style: none none solid none;
  --_nys-button-border-width: 3px;
  --_nys-button-padding--x: var(--nys-space-150);
  --_nys-button-padding--y: var(--nys-space-200);
}

.nys-tabgroup__tabs {
  display: flex;
  gap: var(--nys-space-100);
  position: relative;
  overflow-x: auto;
  white-space: nowrap;
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }

  &::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    border-bottom: solid var(--nys-color-neutral-50) 3px;
    z-index: -1;
  }
}

.nys-tabgroup__panels {
  padding: var(--nys-space-400);
}

